parser.output
Nonterminals useless in grammar

   param_list
   param


Terminals unused in grammar

   TOKEN_EOF
   TOKEN_WHILE
   TOKEN_ERROR


Rules useless in grammar

   86 param_opt_list: param_list

   87 param_list: param TOKEN_COMMA param_list

   88 param: id TOKEN_COLON type


Rules useless in parser due to conflicts

   62 stmt: %empty

   67 stmt_2: TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_2 TOKEN_ELSE stmt_1
   68       | TOKEN_FOR TOKEN_LPAREN expr_opt TOKEN_SEMICOL expr_opt TOKEN_SEMICOL expr_opt TOKEN_RPAREN stmt_1
   69       | stmt_t


State 50 conflicts: 16 shift/reduce, 1 reduce/reduce
State 84 conflicts: 16 shift/reduce, 1 reduce/reduce
State 90 conflicts: 16 shift/reduce, 1 reduce/reduce
State 93 conflicts: 18 reduce/reduce
State 145 conflicts: 18 reduce/reduce
State 150 conflicts: 18 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: decl_s TOKEN_SEMICOL

    2 expr: expr_8

    3 expr_opt: expr
    4         | %empty

    5 expr_list: expr TOKEN_COMMA expr_list
    6          | expr

    7 expr_opt_list: expr_list
    8              | %empty

    9 expr_br: TOKEN_LBRACE expr_opt_list TOKEN_RBRACE
   10        | TOKEN_LBRACE expr_opt_list TOKEN_RBRACE expr_br
   11        | expr_list

   12 expr_8: expr_7 TOKEN_ASSIGN expr_8
   13       | expr_7

   14 expr_7: expr_7 TOKEN_OR expr_6
   15       | expr_6

   16 expr_6: expr_6 TOKEN_AND expr_5
   17       | expr_5

   18 expr_5: expr_5 TOKEN_LT expr_4
   19       | expr_5 TOKEN_LTE expr_4
   20       | expr_5 TOKEN_GT expr_4
   21       | expr_5 TOKEN_GTE expr_4
   22       | expr_5 TOKEN_EQ expr_4
   23       | expr_5 TOKEN_NOT_EQ expr_4
   24       | expr_4

   25 expr_4: expr_4 TOKEN_PLUS expr_3
   26       | expr_4 TOKEN_MINUS expr_3
   27       | expr_3

   28 expr_3: expr_3 TOKEN_MULT expr_2
   29       | expr_3 TOKEN_DIV expr_2
   30       | expr_3 TOKEN_MOD expr_2
   31       | expr_2

   32 expr_2: expr_2 TOKEN_EXP expr_1
   33       | expr_1

   34 expr_1: TOKEN_NOT expr_0
   35       | TOKEN_PLUS expr_0
   36       | TOKEN_MINUS expr_0
   37       | expr_0

   38 expr_0: expr_0 TOKEN_INCREMENT
   39       | expr_0 TOKEN_DECREMENT
   40       | TOKEN_LPAREN expr TOKEN_RPAREN
   41       | expr_0 TOKEN_LBRACKET expr TOKEN_RBRACKET
   42       | id TOKEN_LPAREN expr_opt_list TOKEN_RPAREN
   43       | atomic

   44 atomic: id
   45       | literal

   46 literal: TOKEN_INT_LIT
   47        | TOKEN_STR_LIT
   48        | TOKEN_CHAR_LIT
   49        | TOKEN_FLOAT_LIT
   50        | TOKEN_TRUE
   51        | TOKEN_FALSE

   52 id: TOKEN_IDENT

   53 decl_s: decl decl_s
   54       | %empty

   55 decl: id TOKEN_COLON type TOKEN_ASSIGN expr_br TOKEN_SEMICOL
   56     | id TOKEN_COLON type TOKEN_ASSIGN stmt_br
   57     | id TOKEN_COLON type TOKEN_SEMICOL

   58 stmt_s: stmt stmt_s
   59       | %empty

   60 stmt: stmt_1
   61     | stmt_2
   62     | %empty

   63 stmt_1: TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_1
   64       | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_2 TOKEN_ELSE stmt_1
   65       | TOKEN_FOR TOKEN_LPAREN expr_opt TOKEN_SEMICOL expr_opt TOKEN_SEMICOL expr_opt TOKEN_RPAREN stmt_1
   66       | stmt_t

   67 stmt_2: TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_2 TOKEN_ELSE stmt_1
   68       | TOKEN_FOR TOKEN_LPAREN expr_opt TOKEN_SEMICOL expr_opt TOKEN_SEMICOL expr_opt TOKEN_RPAREN stmt_1
   69       | stmt_t

   70 stmt_t: decl
   71       | expr TOKEN_SEMICOL
   72       | TOKEN_RETURN expr_opt TOKEN_SEMICOL
   73       | TOKEN_PRINT expr_opt_list TOKEN_SEMICOL
   74       | stmt_br

   75 stmt_br: TOKEN_LBRACE stmt_s TOKEN_RBRACE

   76 type: TOKEN_STRING
   77     | TOKEN_INT
   78     | TOKEN_FLOAT
   79     | TOKEN_CHAR
   80     | TOKEN_VOID
   81     | TOKEN_BOOLEAN
   82     | TOKEN_AUTO
   83     | TOKEN_ARRAY TOKEN_LBRACKET expr_opt_list TOKEN_RBRACKET type
   84     | TOKEN_FUNCTION type TOKEN_LPAREN param_opt_list TOKEN_RPAREN

   85 param_opt_list: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_EOF (258)
TOKEN_INT_LIT (259) 46
TOKEN_CHAR_LIT (260) 48
TOKEN_FLOAT_LIT (261) 49
TOKEN_STR_LIT (262) 47
TOKEN_IDENT (263) 52
TOKEN_ARRAY (264) 83
TOKEN_AUTO (265) 82
TOKEN_BOOLEAN (266) 81
TOKEN_CHAR (267) 79
TOKEN_ELSE (268) 64 67
TOKEN_FALSE (269) 51
TOKEN_FOR (270) 65 68
TOKEN_FLOAT (271) 78
TOKEN_FUNCTION (272) 84
TOKEN_IF (273) 63 64 67
TOKEN_INT (274) 77
TOKEN_PRINT (275) 73
TOKEN_RETURN (276) 72
TOKEN_STRING (277) 76
TOKEN_TRUE (278) 50
TOKEN_VOID (279) 80
TOKEN_WHILE (280)
TOKEN_LPAREN (281) 40 42 63 64 65 67 68 84
TOKEN_RPAREN (282) 40 42 63 64 65 67 68 84
TOKEN_LBRACKET (283) 41 83
TOKEN_RBRACKET (284) 41 83
TOKEN_LBRACE (285) 9 10 75
TOKEN_RBRACE (286) 9 10 75
TOKEN_INCREMENT (287) 38
TOKEN_DECREMENT (288) 39
TOKEN_EXP (289) 32
TOKEN_MULT (290) 28
TOKEN_DIV (291) 29
TOKEN_MOD (292) 30
TOKEN_PLUS (293) 25 35
TOKEN_MINUS (294) 26 36
TOKEN_GTE (295) 21
TOKEN_LTE (296) 19
TOKEN_EQ (297) 22
TOKEN_NOT_EQ (298) 23
TOKEN_LT (299) 18
TOKEN_GT (300) 20
TOKEN_NOT (301) 34
TOKEN_ASSIGN (302) 12 55 56
TOKEN_COMMA (303) 5
TOKEN_COLON (304) 55 56 57
TOKEN_SEMICOL (305) 1 55 57 65 68 71 72 73
TOKEN_OR (306) 14
TOKEN_AND (307) 16
TOKEN_ERROR (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1, on right: 0
expr (56)
    on left: 2, on right: 3 5 6 40 41 63 64 67 71
expr_opt (57)
    on left: 3 4, on right: 65 68 72
expr_list (58)
    on left: 5 6, on right: 5 7 11
expr_opt_list (59)
    on left: 7 8, on right: 9 10 42 73 83
expr_br (60)
    on left: 9 10 11, on right: 10 55
expr_8 (61)
    on left: 12 13, on right: 2 12
expr_7 (62)
    on left: 14 15, on right: 12 13 14
expr_6 (63)
    on left: 16 17, on right: 14 15 16
expr_5 (64)
    on left: 18 19 20 21 22 23 24, on right: 16 17 18 19 20 21 22 23
expr_4 (65)
    on left: 25 26 27, on right: 18 19 20 21 22 23 24 25 26
expr_3 (66)
    on left: 28 29 30 31, on right: 25 26 27 28 29 30
expr_2 (67)
    on left: 32 33, on right: 28 29 30 31 32
expr_1 (68)
    on left: 34 35 36 37, on right: 32 33
expr_0 (69)
    on left: 38 39 40 41 42 43, on right: 34 35 36 37 38 39 41
atomic (70)
    on left: 44 45, on right: 43
literal (71)
    on left: 46 47 48 49 50 51, on right: 45
id (72)
    on left: 52, on right: 42 44 55 56 57
decl_s (73)
    on left: 53 54, on right: 1 53
decl (74)
    on left: 55 56 57, on right: 53 70
stmt_s (75)
    on left: 58 59, on right: 58 75
stmt (76)
    on left: 60 61 62, on right: 58
stmt_1 (77)
    on left: 63 64 65 66, on right: 60 63 64 65 67 68
stmt_2 (78)
    on left: 67 68 69, on right: 61 64 67
stmt_t (79)
    on left: 70 71 72 73 74, on right: 66 69
stmt_br (80)
    on left: 75, on right: 56 74
type (81)
    on left: 76 77 78 79 80 81 82 83 84, on right: 55 56 57 83 84
param_opt_list (82)
    on left: 85, on right: 84


State 0

    0 $accept: . program $end

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 54 (decl_s)

    program  go to state 2
    id       go to state 3
    decl_s   go to state 4
    decl     go to state 5


State 1

   52 id: TOKEN_IDENT .

    $default  reduce using rule 52 (id)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

   55 decl: id . TOKEN_COLON type TOKEN_ASSIGN expr_br TOKEN_SEMICOL
   56     | id . TOKEN_COLON type TOKEN_ASSIGN stmt_br
   57     | id . TOKEN_COLON type TOKEN_SEMICOL

    TOKEN_COLON  shift, and go to state 7


State 4

    1 program: decl_s . TOKEN_SEMICOL

    TOKEN_SEMICOL  shift, and go to state 8


State 5

   53 decl_s: decl . decl_s

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 54 (decl_s)

    id      go to state 3
    decl_s  go to state 9
    decl    go to state 5


State 6

    0 $accept: program $end .

    $default  accept


State 7

   55 decl: id TOKEN_COLON . type TOKEN_ASSIGN expr_br TOKEN_SEMICOL
   56     | id TOKEN_COLON . type TOKEN_ASSIGN stmt_br
   57     | id TOKEN_COLON . type TOKEN_SEMICOL

    TOKEN_ARRAY     shift, and go to state 10
    TOKEN_AUTO      shift, and go to state 11
    TOKEN_BOOLEAN   shift, and go to state 12
    TOKEN_CHAR      shift, and go to state 13
    TOKEN_FLOAT     shift, and go to state 14
    TOKEN_FUNCTION  shift, and go to state 15
    TOKEN_INT       shift, and go to state 16
    TOKEN_STRING    shift, and go to state 17
    TOKEN_VOID      shift, and go to state 18

    type  go to state 19


State 8

    1 program: decl_s TOKEN_SEMICOL .

    $default  reduce using rule 1 (program)


State 9

   53 decl_s: decl decl_s .

    $default  reduce using rule 53 (decl_s)


State 10

   83 type: TOKEN_ARRAY . TOKEN_LBRACKET expr_opt_list TOKEN_RBRACKET type

    TOKEN_LBRACKET  shift, and go to state 20


State 11

   82 type: TOKEN_AUTO .

    $default  reduce using rule 82 (type)


State 12

   81 type: TOKEN_BOOLEAN .

    $default  reduce using rule 81 (type)


State 13

   79 type: TOKEN_CHAR .

    $default  reduce using rule 79 (type)


State 14

   78 type: TOKEN_FLOAT .

    $default  reduce using rule 78 (type)


State 15

   84 type: TOKEN_FUNCTION . type TOKEN_LPAREN param_opt_list TOKEN_RPAREN

    TOKEN_ARRAY     shift, and go to state 10
    TOKEN_AUTO      shift, and go to state 11
    TOKEN_BOOLEAN   shift, and go to state 12
    TOKEN_CHAR      shift, and go to state 13
    TOKEN_FLOAT     shift, and go to state 14
    TOKEN_FUNCTION  shift, and go to state 15
    TOKEN_INT       shift, and go to state 16
    TOKEN_STRING    shift, and go to state 17
    TOKEN_VOID      shift, and go to state 18

    type  go to state 21


State 16

   77 type: TOKEN_INT .

    $default  reduce using rule 77 (type)


State 17

   76 type: TOKEN_STRING .

    $default  reduce using rule 76 (type)


State 18

   80 type: TOKEN_VOID .

    $default  reduce using rule 80 (type)


State 19

   55 decl: id TOKEN_COLON type . TOKEN_ASSIGN expr_br TOKEN_SEMICOL
   56     | id TOKEN_COLON type . TOKEN_ASSIGN stmt_br
   57     | id TOKEN_COLON type . TOKEN_SEMICOL

    TOKEN_ASSIGN   shift, and go to state 22
    TOKEN_SEMICOL  shift, and go to state 23


State 20

   83 type: TOKEN_ARRAY TOKEN_LBRACKET . expr_opt_list TOKEN_RBRACKET type

    TOKEN_INT_LIT    shift, and go to state 24
    TOKEN_CHAR_LIT   shift, and go to state 25
    TOKEN_FLOAT_LIT  shift, and go to state 26
    TOKEN_STR_LIT    shift, and go to state 27
    TOKEN_IDENT      shift, and go to state 1
    TOKEN_FALSE      shift, and go to state 28
    TOKEN_TRUE       shift, and go to state 29
    TOKEN_LPAREN     shift, and go to state 30
    TOKEN_PLUS       shift, and go to state 31
    TOKEN_MINUS      shift, and go to state 32
    TOKEN_NOT        shift, and go to state 33

    $default  reduce using rule 8 (expr_opt_list)

    expr           go to state 34
    expr_list      go to state 35
    expr_opt_list  go to state 36
    expr_8         go to state 37
    expr_7         go to state 38
    expr_6         go to state 39
    expr_5         go to state 40
    expr_4         go to state 41
    expr_3         go to state 42
    expr_2         go to state 43
    expr_1         go to state 44
    expr_0         go to state 45
    atomic         go to state 46
    literal        go to state 47
    id             go to state 48


State 21

   84 type: TOKEN_FUNCTION type . TOKEN_LPAREN param_opt_list TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 49


State 22

   55 decl: id TOKEN_COLON type TOKEN_ASSIGN . expr_br TOKEN_SEMICOL
   56     | id TOKEN_COLON type TOKEN_ASSIGN . stmt_br

    TOKEN_INT_LIT    shift, and go to state 24
    TOKEN_CHAR_LIT   shift, and go to state 25
    TOKEN_FLOAT_LIT  shift, and go to state 26
    TOKEN_STR_LIT    shift, and go to state 27
    TOKEN_IDENT      shift, and go to state 1
    TOKEN_FALSE      shift, and go to state 28
    TOKEN_TRUE       shift, and go to state 29
    TOKEN_LPAREN     shift, and go to state 30
    TOKEN_LBRACE     shift, and go to state 50
    TOKEN_PLUS       shift, and go to state 31
    TOKEN_MINUS      shift, and go to state 32
    TOKEN_NOT        shift, and go to state 33

    expr       go to state 34
    expr_list  go to state 51
    expr_br    go to state 52
    expr_8     go to state 37
    expr_7     go to state 38
    expr_6     go to state 39
    expr_5     go to state 40
    expr_4     go to state 41
    expr_3     go to state 42
    expr_2     go to state 43
    expr_1     go to state 44
    expr_0     go to state 45
    atomic     go to state 46
    literal    go to state 47
    id         go to state 48
    stmt_br    go to state 53


State 23

   57 decl: id TOKEN_COLON type TOKEN_SEMICOL .

    $default  reduce using rule 57 (decl)


State 24

   46 literal: TOKEN_INT_LIT .

    $default  reduce using rule 46 (literal)


State 25

   48 literal: TOKEN_CHAR_LIT .

    $default  reduce using rule 48 (literal)


State 26

   49 literal: TOKEN_FLOAT_LIT .

    $default  reduce using rule 49 (literal)


State 27

   47 literal: TOKEN_STR_LIT .

    $default  reduce using rule 47 (literal)


State 28

   51 literal: TOKEN_FALSE .

    $default  reduce using rule 51 (literal)


State 29

   50 literal: TOKEN_TRUE .

    $default  reduce using rule 50 (literal)


State 30

   40 expr_0: TOKEN_LPAREN . expr TOKEN_RPAREN

    TOKEN_INT_LIT    shift, and go to state 24
    TOKEN_CHAR_LIT   shift, and go to state 25
    TOKEN_FLOAT_LIT  shift, and go to state 26
    TOKEN_STR_LIT    shift, and go to state 27
    TOKEN_IDENT      shift, and go to state 1
    TOKEN_FALSE      shift, and go to state 28
    TOKEN_TRUE       shift, and go to state 29
    TOKEN_LPAREN     shift, and go to state 30
    TOKEN_PLUS       shift, and go to state 31
    TOKEN_MINUS      shift, and go to state 32
    TOKEN_NOT        shift, and go to state 33

    expr     go to state 54
    expr_8   go to state 37
    expr_7   go to state 38
    expr_6   go to state 39
    expr_5   go to state 40
    expr_4   go to state 41
    expr_3   go to state 42
    expr_2   go to state 43
    expr_1   go to state 44
    expr_0   go to state 45
    atomic   go to state 46
    literal  go to state 47
    id       go to state 48


State 31

   35 expr_1: TOKEN_PLUS . expr_0

    TOKEN_INT_LIT    shift, and go to state 24
    TOKEN_CHAR_LIT   shift, and go to state 25
    TOKEN_FLOAT_LIT  shift, and go to state 26
    TOKEN_STR_LIT    shift, and go to state 27
    TOKEN_IDENT      shift, and go to state 1
    TOKEN_FALSE      shift, and go to state 28
    TOKEN_TRUE       shift, and go to state 29
    TOKEN_LPAREN     shift, and go to state 30

    expr_0   go to state 55
    atomic   go to state 46
    literal  go to state 47
    id       go to state 48


State 32

   36 expr_1: TOKEN_MINUS . expr_0

    TOKEN_INT_LIT    shift, and go to state 24
    TOKEN_CHAR_LIT   shift, and go to state 25
    TOKEN_FLOAT_LIT  shift, and go to state 26
    TOKEN_STR_LIT    shift, and go to state 27
    TOKEN_IDENT      shift, and go to state 1
    TOKEN_FALSE      shift, and go to state 28
    TOKEN_TRUE       shift, and go to state 29
    TOKEN_LPAREN     shift, and go to state 30

    expr_0   go to state 56
    atomic   go to state 46
    literal  go to state 47
    id       go to state 48


State 33

   34 expr_1: TOKEN_NOT . expr_0

    TOKEN_INT_LIT    shift, and go to state 24
    TOKEN_CHAR_LIT   shift, and go to state 25
    TOKEN_FLOAT_LIT  shift, and go to state 26
    TOKEN_STR_LIT    shift, and go to state 27
    TOKEN_IDENT      shift, and go to state 1
    TOKEN_FALSE      shift, and go to state 28
    TOKEN_TRUE       shift, and go to state 29
    TOKEN_LPAREN     shift, and go to state 30

    expr_0   go to state 57
    atomic   go to state 46
    literal  go to state 47
    id       go to state 48


State 34

    5 expr_list: expr . TOKEN_COMMA expr_list
    6          | expr .

    TOKEN_COMMA  shift, and go to state 58

    $default  reduce using rule 6 (expr_list)


State 35

    7 expr_opt_list: expr_list .

    $default  reduce using rule 7 (expr_opt_list)


State 36

   83 type: TOKEN_ARRAY TOKEN_LBRACKET expr_opt_list . TOKEN_RBRACKET type

    TOKEN_RBRACKET  shift, and go to state 59


State 37

    2 expr: expr_8 .

    $default  reduce using rule 2 (expr)


State 38

   12 expr_8: expr_7 . TOKEN_ASSIGN expr_8
   13       | expr_7 .
   14 expr_7: expr_7 . TOKEN_OR expr_6

    TOKEN_ASSIGN  shift, and go to state 60
    TOKEN_OR      shift, and go to state 61

    $default  reduce using rule 13 (expr_8)


State 39

   15 expr_7: expr_6 .
   16 expr_6: expr_6 . TOKEN_AND expr_5

    TOKEN_AND  shift, and go to state 62

    $default  reduce using rule 15 (expr_7)


State 40

   17 expr_6: expr_5 .
   18 expr_5: expr_5 . TOKEN_LT expr_4
   19       | expr_5 . TOKEN_LTE expr_4
   20       | expr_5 . TOKEN_GT expr_4
   21       | expr_5 . TOKEN_GTE expr_4
   22       | expr_5 . TOKEN_EQ expr_4
   23       | expr_5 . TOKEN_NOT_EQ expr_4

    TOKEN_GTE     shift, and go to state 63
    TOKEN_LTE     shift, and go to state 64
    TOKEN_EQ      shift, and go to state 65
    TOKEN_NOT_EQ  shift, and go to state 66
    TOKEN_LT      shift, and go to state 67
    TOKEN_GT      shift, and go to state 68

    $default  reduce using rule 17 (expr_6)


State 41

   24 expr_5: expr_4 .
   25 expr_4: expr_4 . TOKEN_PLUS expr_3
   26       | expr_4 . TOKEN_MINUS expr_3

    TOKEN_PLUS   shift, and go to state 69
    TOKEN_MINUS  shift, and go to state 70

    $default  reduce using rule 24 (expr_5)


State 42

   27 expr_4: expr_3 .
   28 expr_3: expr_3 . TOKEN_MULT expr_2
   29       | expr_3 . TOKEN_DIV expr_2
   30       | expr_3 . TOKEN_MOD expr_2

    TOKEN_MULT  shift, and go to state 71
    TOKEN_DIV   shift, and go to state 72
    TOKEN_MOD   shift, and go to state 73

    $default  reduce using rule 27 (expr_4)


State 43

   31 expr_3: expr_2 .
   32 expr_2: expr_2 . TOKEN_EXP expr_1

    TOKEN_EXP  shift, and go to state 74

    $default  reduce using rule 31 (expr_3)


State 44

   33 expr_2: expr_1 .

    $default  reduce using rule 33 (expr_2)


State 45

   37 expr_1: expr_0 .
   38 expr_0: expr_0 . TOKEN_INCREMENT
   39       | expr_0 . TOKEN_DECREMENT
   41       | expr_0 . TOKEN_LBRACKET expr TOKEN_RBRACKET

    TOKEN_LBRACKET   shift, and go to state 75
    TOKEN_INCREMENT  shift, and go to state 76
    TOKEN_DECREMENT  shift, and go to state 77

    $default  reduce using rule 37 (expr_1)


State 46

   43 expr_0: atomic .

    $default  reduce using rule 43 (expr_0)


State 47

   45 atomic: literal .

    $default  reduce using rule 45 (atomic)


State 48

   42 expr_0: id . TOKEN_LPAREN expr_opt_list TOKEN_RPAREN
   44 atomic: id .

    TOKEN_LPAREN  shift, and go to state 78

    $default  reduce using rule 44 (atomic)


State 49

   84 type: TOKEN_FUNCTION type TOKEN_LPAREN . param_opt_list TOKEN_RPAREN

    $default  reduce using rule 85 (param_opt_list)

    param_opt_list  go to state 79


State 50

    9 expr_br: TOKEN_LBRACE . expr_opt_list TOKEN_RBRACE
   10        | TOKEN_LBRACE . expr_opt_list TOKEN_RBRACE expr_br
   75 stmt_br: TOKEN_LBRACE . stmt_s TOKEN_RBRACE

    TOKEN_INT_LIT    shift, and go to state 24
    TOKEN_CHAR_LIT   shift, and go to state 25
    TOKEN_FLOAT_LIT  shift, and go to state 26
    TOKEN_STR_LIT    shift, and go to state 27
    TOKEN_IDENT      shift, and go to state 1
    TOKEN_FALSE      shift, and go to state 28
    TOKEN_FOR        shift, and go to state 80
    TOKEN_IF         shift, and go to state 81
    TOKEN_PRINT      shift, and go to state 82
    TOKEN_RETURN     shift, and go to state 83
    TOKEN_TRUE       shift, and go to state 29
    TOKEN_LPAREN     shift, and go to state 30
    TOKEN_LBRACE     shift, and go to state 84
    TOKEN_PLUS       shift, and go to state 31
    TOKEN_MINUS      shift, and go to state 32
    TOKEN_NOT        shift, and go to state 33

    TOKEN_INT_LIT    [reduce using rule 62 (stmt)]
    TOKEN_CHAR_LIT   [reduce using rule 62 (stmt)]
    TOKEN_FLOAT_LIT  [reduce using rule 62 (stmt)]
    TOKEN_STR_LIT    [reduce using rule 62 (stmt)]
    TOKEN_IDENT      [reduce using rule 62 (stmt)]
    TOKEN_FALSE      [reduce using rule 62 (stmt)]
    TOKEN_FOR        [reduce using rule 62 (stmt)]
    TOKEN_IF         [reduce using rule 62 (stmt)]
    TOKEN_PRINT      [reduce using rule 62 (stmt)]
    TOKEN_RETURN     [reduce using rule 62 (stmt)]
    TOKEN_TRUE       [reduce using rule 62 (stmt)]
    TOKEN_LPAREN     [reduce using rule 62 (stmt)]
    TOKEN_LBRACE     [reduce using rule 62 (stmt)]
    TOKEN_RBRACE     reduce using rule 8 (expr_opt_list)
    TOKEN_RBRACE     [reduce using rule 59 (stmt_s)]
    TOKEN_RBRACE     [reduce using rule 62 (stmt)]
    TOKEN_PLUS       [reduce using rule 62 (stmt)]
    TOKEN_MINUS      [reduce using rule 62 (stmt)]
    TOKEN_NOT        [reduce using rule 62 (stmt)]
    $default         reduce using rule 8 (expr_opt_list)
